# Hands-On-Neural-Network-Programming-with-CPP

./: README.md
examples/chapter4/: backpropagation.hpp
examples/chapter_eight/filter_image/: CMakeLists.txt
examples/chapter_eight/filter_image/include/: dataset.hpp
examples/chapter_eight/filter_image/src/: main.cpp
examples/chapter_eight/simple_convolution/: CMakeLists.txt
examples/chapter_eight/simple_convolution/src/: main.cpp
examples/chapter_five/: scatterplot_matrix.cpp  zscore_normalization.cpp
examples/chapter_five/evaluation_metrics/: CMakeLists.txt
examples/chapter_five/evaluation_metrics/include/: backpropagation.hpp  mlp_core.hpp  performance_measurement.hpp
examples/chapter_five/evaluation_metrics/src/: evaluation_metrics.cpp
examples/chapter_five/evaluation_metrics/src/lib/: mlp_core.cpp  performance_measurement.cpp
examples/chapter_four/: main.cpp
examples/chapter_four/optimizers_example/: CMakeLists.txt
examples/chapter_four/optimizers_example/include/: activation_functions.hpp  backpropagation.hpp  cost_functions.hpp  dataset.hpp
examples/chapter_four/optimizers_example/src/: main.cpp
examples/chapter_nine/max_pooling/: CMakeLists.txt
examples/chapter_nine/max_pooling/src/: main.cpp
examples/chapter_nine/question/: CMakeLists.txt
examples/chapter_nine/question/src/: main.cpp
examples/chapter_nine/relu_convolution/: CMakeLists.txt
examples/chapter_nine/relu_convolution/src/: main.cpp
examples/chapter_nine/rgb_convolution/: CMakeLists.txt
examples/chapter_nine/rgb_convolution/src/: main.cpp
examples/chapter_nine/same_padding/: CMakeLists.txt
examples/chapter_nine/same_padding/src/: main.cpp
examples/chapter_nine/strided_convolution/: CMakeLists.txt
examples/chapter_nine/strided_convolution/src/: main.cpp
examples/chapter_nine/two_layers_network/: CMakeLists.txt
examples/chapter_nine/two_layers_network/src/: main.cpp
examples/chapter_nine/valid_convolution/: CMakeLists.txt
examples/chapter_nine/valid_convolution/src/: main.cpp
examples/chapter_one/examples/: CMakeLists.txt
examples/chapter_one/examples/src/: classification.cpp  feedforwading.cpp
examples/chapter_seven/: dataset.hpp  kfold.cpp  minibatch.cpp  performance_measurement.hpp  stratified_kfold.cpp
examples/chapter_seven/crossvalidation_example/: CMakeLists.txt
examples/chapter_seven/crossvalidation_example/src/: holdout.cpp
examples/chapter_seven/crossvalidation_example/src/lib/: performance_measurement.cpp
examples/chapter_seven/minibatch_example/: CMakeLists.txt
examples/chapter_seven/minibatch_example/include/: backpropagation.hpp  cost_functions.hpp  mlp_core.hpp
examples/chapter_seven/minibatch_example/libs/eigen/download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
examples/chapter_seven/minibatch_example/libs/eigen/download/eigen-prefix/tmp/: eigen-gitclone.cmake  eigen-gitupdate.cmake
examples/chapter_seven/minibatch_example/libs/fast-cpp-csv-parser/download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
examples/chapter_seven/minibatch_example/libs/fast-cpp-csv-parser/download/fast-cpp-csv-parser-prefix/src/fast-cpp-csv-parser-stamp/: fast-cpp-csv-parser-gitclone-lastrun.txt
examples/chapter_seven/minibatch_example/libs/fast-cpp-csv-parser/download/fast-cpp-csv-parser-prefix/tmp/: fast-cpp-csv-parser-gitclone.cmake  fast-cpp-csv-parser-gitupdate.cmake
examples/chapter_seven/minibatch_example/src/: main.cpp
examples/chapter_seven/minibatch_example/src/lib/: mlp_core.cpp
examples/chapter_six/missing_data/: CMakeLists.txt
examples/chapter_six/missing_data/libs/fast-cpp-csv-parser/: install.txt
examples/chapter_six/missing_data/src/: main.cpp
examples/chapter_six/mnist_normalization/: CMakeLists.txt
examples/chapter_six/mnist_normalization/src/: main.cpp
examples/chapter_three/: backprop_iris.cpp  example_1.cpp  gradient_descent_example.cpp  matrix_definitions.hpp  softmax_bp.cpp
examples/chapter_three/backprop_example/: CMakeLists.txt
examples/chapter_three/backprop_example/include/: activation_functions.hpp  cost_functions.hpp
examples/chapter_three/backprop_example/libs/eigen/: CMakeLists.txt.in
examples/chapter_three/backprop_example/libs/fast-cpp-csv-parser/: CMakeLists.txt.in
examples/chapter_three/backprop_example/src/: main.cpp
examples/chapter_three/backprop_example/src/lib/: performance_measurement.cpp
examples/chapter_three/cost_functions_example/: CMakeLists.txt
examples/chapter_three/cost_functions_example/src/: draw_cost_surface.cpp  draw_gradient_for_bias_single_input.cpp  draw_gradient_for_weight_single_input.cpp
examples/chapter_three/gradient_descent_example/: CMakeLists.txt
examples/chapter_three/gradient_descent_example/src/: main.cpp
examples/chapter_three/softmax_example/: CMakeLists.txt
examples/chapter_three/softmax_example/include/: backpropagation.hpp  dataset.hpp  performance_measurement.hpp
examples/chapter_three/softmax_example/src/: main.cpp
examples/chapter_two/: activation_functions.hpp  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  mlp_core.cpp
examples/chapter_two/examples/: CMakeLists.txt
examples/chapter_two/examples/data/: circular-example.csv
examples/chapter_two/examples/include/: activation_functions.hpp  mlp_core.hpp
examples/chapter_two/examples/src/: example_2.cpp  mse_eval.cpp
